--- a/dev.env
+++ b/dev.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:6lJlt9s5nX8EsV9t+Zmzk4xmkzqSPJSK43tuM40cbVM=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_CLIENT_NAME=Manager
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
